Changed module to only add new data to the database

--- a/dataprocessing_wather.ipynb
+++ b/dataprocessing_wather.ipynb
@@ -8,12 +8,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import datetime as dt\n",
     "import psycopg2\n",
     "import os\n",
-    "from dotenv import load_dotenv\n",
-    "import numpy as np\n",
-    "from zoneinfo import ZoneInfo\n"
+    "from dotenv import load_dotenv\n"
    ]
   },
   {
@@ -44,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d9161785",
    "metadata": {},
    "outputs": [
@@ -53,14 +50,18 @@
      "output_type": "stream",
      "text": [
       "Connecting to Datalake \n",
-      "Connection to Datalake successful.\n"
+      "Connection to Datalake successful.\n",
+      "Connecting to WareHouse \n",
+      "Connection to WareHouse successful.\n",
+      "Query Performed: SELECT max(time_id),max(weather_id) FROM fact_weather;\n",
+      "Query Performed: SELECT timestamp_utc FROM dim_time WHERE time_id = 12129;\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_3104\\104975373.py:13: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n"
      ]
     },
@@ -68,14 +69,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sunshine data downloaded.\n"
+      "Last timestamp in warehouse:  2025-05-20 08:00:00\n",
+      "Query Performed: SELECT * FROM tbl_weather_sun_data WHERE date >= '2025-05-20';\n",
+      "Sunshine data downloaded.\n",
+      "Query Performed: SELECT * FROM tbl_weather_data WHERE datetime > '2025-05-20 08:00:00';\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_3104\\104975373.py:13: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n"
      ]
     },
@@ -84,18 +88,19 @@
      "output_type": "stream",
      "text": [
       "Weather data downloaded.\n",
+      "New weather data available.\n",
       "Data successfully processed.\n",
-      "Connecting to WareHouse \n",
-      "Connection to WareHouse successful.\n"
+      "Query Performed: SELECT * FROM dim_locations;\n",
+      "Query Performed: SELECT * FROM dim_time;\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_3104\\104975373.py:13: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n",
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_3104\\104975373.py:13: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n"
      ]
     },
@@ -106,52 +111,48 @@
       "Table 'fact_weather' created successfully.\n",
       "Table 'fact_weather' created and data uploaded successfully.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[        temp  wind_speed  sunshine_minutes  location_id  time_id  weather_id\n",
-       " 0        NaN         NaN               NaN          NaN        1           0\n",
-       " 1        NaN         NaN               NaN          NaN        2           1\n",
-       " 2        NaN         NaN               NaN          NaN        3           2\n",
-       " 3        NaN         NaN               NaN          NaN        4           3\n",
-       " 4        NaN         NaN               NaN          NaN        5           4\n",
-       " ...      ...         ...               ...          ...      ...         ...\n",
-       " 166963   NaN         NaN               NaN          NaN    13124      166963\n",
-       " 166964   NaN         NaN               NaN          NaN    13125      166964\n",
-       " 166965   NaN         NaN               NaN          NaN    13126      166965\n",
-       " 166966   NaN         NaN               NaN          NaN    13127      166966\n",
-       " 166967   NaN         NaN               NaN          NaN    13128      166967\n",
-       " \n",
-       " [166968 rows x 6 columns],\n",
-       " <connection object at 0x00000165026F5030; dsn: 'user=postgres password=xxx dbname=group2dbdatawarehouse host=group2dbdatawarehouse.cqbkg4qk84i1.us-east-1.rds.amazonaws.com', closed: 0>]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def connect_to_db(endpoint, db_name, username, password):\n",
+    "\n",
+    "\n",
+    "def connect_to_db(endpoint: str, db_name: str, username: str, password: str) -> psycopg2.extensions.connection:\n",
+    "    \"\"\"\n",
+    "    Establish a connection to a PostgreSQL database.\n",
+    "    \"\"\"\n",
     "    conn = psycopg2.connect(\n",
-    "            host=endpoint,\n",
-    "            dbname=db_name,\n",
-    "            user=username,\n",
-    "            password=password\n",
-    "        )\n",
+    "        host=endpoint,\n",
+    "        dbname=db_name,\n",
+    "        user=username,\n",
+    "        password=password\n",
+    "    )\n",
     "    conn.set_session(autocommit=True)\n",
     "    return conn\n",
     "\n",
-    "def get_data_from_db(conn, table_name):\n",
-    "    query = f\"SELECT * FROM {table_name}\"\n",
+    "def get_data_from_db(\n",
+    "    conn: psycopg2.extensions.connection,\n",
+    "    table_name: str,\n",
+    "    expression: str = '*',\n",
+    "    condition: str = ''\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Query data from a database table and return as a pandas DataFrame.\n",
+    "    \"\"\"\n",
+    "    query = f\"SELECT {expression} FROM {table_name}\"\n",
+    "    if condition != '':\n",
+    "        query += f\" WHERE {condition}\"\n",
+    "    query += ';'\n",
+    "    print(\"Query Performed: \" + query)\n",
     "    df = pd.read_sql_query(query, conn)\n",
     "    return df\n",
     "\n",
+    "def calculate_sunshine_percentage(df_sun: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Calculate the percentage of sunshine for each hour of the day.\n",
+    "    \"\"\"\n",
     "\n",
-    "def calculate_sunshine_percentage(df_sun):\n",
-    "\n",
-    "    def time_to_float(t):\n",
+    "    def time_to_float(t) -> float:\n",
+    "        # Convert time string or datetime.time to float hours\n",
     "        if isinstance(t, str):\n",
     "            h, m, s = map(int, t.split(':'))\n",
     "        else:\n",
@@ -163,7 +164,7 @@
     "    df['sunset_float'] = df['sunset'].apply(time_to_float)\n",
     "\n",
     "    for hour in range(24):\n",
-    "        def hour_percentage(row):\n",
+    "        def hour_percentage(row) -> float:\n",
     "            start = row['sunrise_float']\n",
     "            end = row['sunset_float']\n",
     "            hour_start = hour\n",
@@ -185,27 +186,26 @@
     "        var_name='hour',\n",
     "        value_name='sunshine_pct_hour'\n",
     "    )\n",
-    "      \n",
     "    # Extract the hour as integer from the column name\n",
     "    df['hour'] = df['hour'].str.extract(r'(\\d+)').astype(int)\n",
-    "\n",
     "    df['datetime'] = pd.to_datetime(df['date']) + pd.to_timedelta(df['hour'], unit='h')\n",
-    "    df = df.drop(['date', 'hour'], axis=1)  \n",
+    "    df = df.drop(['date', 'hour'], axis=1)\n",
     "    return df\n",
     "\n",
-    "def upload_to_db(conn, table_name, df):\n",
-    "\n",
+    "def upload_to_db(conn: psycopg2.extensions.connection, table_name: str, df: pd.DataFrame) -> None:\n",
+    "    \"\"\"\n",
+    "    Upload a DataFrame to a database table.\n",
+    "    \"\"\"\n",
     "    with conn.cursor() as cur:\n",
-    "        cur.execute(f'DROP TABLE IF EXISTS {table_name};')\n",
+    "        # Create table if it does not exist\n",
     "        cur.execute(f'''\n",
-    "            CREATE TABLE {table_name} (\n",
+    "            CREATE TABLE IF NOT EXISTS {table_name} (\n",
     "                weather_id BIGINT PRIMARY KEY,\n",
     "                time_id BIGINT,\n",
     "                location_id DOUBLE PRECISION,\n",
     "                temperature DOUBLE PRECISION,\n",
     "                wind_speed DOUBLE PRECISION,\n",
     "                sunshine_minutes DOUBLE PRECISION\n",
-    "                \n",
     "            );\n",
     "        ''')\n",
     "        conn.commit()\n",
@@ -217,7 +217,6 @@
     "        INSERT INTO {table_name} (weather_id, time_id, location_id, temperature, wind_speed, sunshine_minutes)\n",
     "        VALUES (%s, %s, %s, %s, %s, %s)\n",
     "    '''\n",
-    "\n",
     "    data_tuples = df.where(pd.notnull(df), None).values.tolist()\n",
     "\n",
     "    with conn.cursor() as cur:\n",
@@ -227,62 +226,72 @@
     "\n",
     "    print(f\"Table '{table_name}' created and data uploaded successfully.\")\n",
     "\n",
-    "\n",
     "def lambda_handler():\n",
-    "\n",
+    "    \"\"\"\n",
+    "    Main ETL handler function to process and upload weather data.\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        print(\"Connecting to Datalake \")\n",
-    "        \n",
     "        dl_conn = connect_to_db(dl_endpoint, dl_db_name, username, dl_password)\n",
-    "\n",
     "        print(\"Connection to Datalake successful.\")\n",
-    "\n",
-    "\n",
-    "        df_sun = get_data_from_db(dl_conn, 'tbl_weather_sun_data')\n",
-    "        df_sun = calculate_sunshine_percentage(df_sun)\n",
-    "        print(\"Sunshine data downloaded.\")\n",
-    "\n",
-    "        df_weather = get_data_from_db(dl_conn, 'tbl_weather_data')\n",
-    "        print(\"Weather data downloaded.\")\n",
-    "\n",
-    "        # Calculate the sunshine duration in minutes\n",
-    "        df_ws = df_weather.merge(df_sun, on=['city', 'datetime'], how='outer')\n",
-    "        df_ws['sunshine_minutes'] = (100- df_ws['clouds_all']) * df_ws['sunshine_pct_hour'] / 10000 * 60\n",
-    "\n",
-    "        # clean up the DataFrame\n",
-    "        df_ws = df_ws.drop(['id','pressure','humidity','temp_min','temp_max','weather_main','weather_description','rain_1h','clouds_all','sunshine_pct_hour'], axis=1)\n",
-    "\n",
-    "        print(\"Data successfully processed.\")\n",
     "\n",
     "        # Connect to warehouse\n",
     "        print(\"Connecting to WareHouse \")\n",
     "        wh_conn = connect_to_db(wh_endpoint, wh_db_name, username, wh_password)\n",
-    "\n",
     "        print(\"Connection to WareHouse successful.\")\n",
     "\n",
-    "        # join with city data\n",
+    "        # Get the current situation in the warehouse\n",
+    "        df_init_fact = get_data_from_db(wh_conn, 'fact_weather', 'max(time_id),max(weather_id)')\n",
+    "        df = get_data_from_db(wh_conn, 'dim_time', 'timestamp_utc', f'time_id = {df_init_fact.iloc[0,0]}')\n",
+    "        print(\"Last timestamp in warehouse: \", df.iloc[0,0])\n",
+    "\n",
+    "        # Download sunshine data from datalake\n",
+    "        df_sun = get_data_from_db(conn=dl_conn, table_name='tbl_weather_sun_data', condition= f\"date >= '{df.iloc[0,0].date()}'\")\n",
+    "        df_sun = calculate_sunshine_percentage(df_sun)\n",
+    "        print(\"Sunshine data downloaded.\")\n",
+    "\n",
+    "        # Download weather data from datalake\n",
+    "        df_weather = get_data_from_db(conn=dl_conn, table_name='tbl_weather_data', condition= f\"datetime > '{df.iloc[0,0]}'\")\n",
+    "        print(\"Weather data downloaded.\")\n",
+    "\n",
+    "        if df_weather.empty:\n",
+    "            print(\"No new weather data available.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            print(\"New weather data available.\")\n",
+    "\n",
+    "        # Calculate the sunshine duration in minutes\n",
+    "        df_ws = df_weather.merge(df_sun, on=['city', 'datetime'], how='inner')\n",
+    "        df_ws['sunshine_minutes'] = (100 - df_ws['clouds_all']) * df_ws['sunshine_pct_hour'] / 10000 * 60\n",
+    "\n",
+    "        # Clean up the DataFrame\n",
+    "        df_ws = df_ws.drop(['id','pressure','humidity','temp_min','temp_max','weather_main','weather_description','rain_1h','clouds_all','sunshine_pct_hour'], axis=1)\n",
+    "        print(\"Data successfully processed.\")\n",
+    "\n",
+    "        # Join with city data\n",
     "        df_city = get_data_from_db(wh_conn, 'dim_locations')\n",
-    "        df_city_s = df_city[['location_id' ,'city']]\n",
+    "        df_city_s = df_city[['location_id', 'city']]\n",
     "        df_joined_wl = df_ws.merge(df_city_s, on=['city'], how='outer')\n",
     "        df_joined_wl = df_joined_wl.drop(['city'], axis=1)\n",
     "\n",
-    "        #join with time data\n",
+    "        # Join with time data\n",
     "        df_time = get_data_from_db(wh_conn, 'dim_time')\n",
     "        df_time_s = df_time[['time_id', 'timestamp_utc']]\n",
     "        df_time_s.columns = ['time_id', 'datetime']\n",
-    "        df_joined_wld = df_joined_wl.merge(df_time_s, on=['datetime'], how='outer')\n",
+    "        df_joined_wld = df_joined_wl.merge(df_time_s, on=['datetime'], how='inner')\n",
     "        df_joined_wld = df_joined_wld.drop(['datetime'], axis=1)\n",
-    "        df_joined_wld['weather_id'] = df_joined_wld.index\n",
+    "        df_joined_wld['weather_id'] = df_joined_wld.index + df_init_fact.iloc[0,1] + 1\n",
     "\n",
+    "        # Upload data to database\n",
     "        upload_to_db(wh_conn, 'fact_weather', df_joined_wld[['weather_id', 'time_id', 'location_id', 'temp', 'wind_speed', 'sunshine_minutes']])\n",
-    "\n",
     "\n",
     "    except Exception as e:\n",
     "        print(\"Error:\", e)\n",
+    "        return None\n",
     "\n",
-    "    return [df_joined_wld, wh_conn]\n",
+    "    return df_joined_wld\n",
     "\n",
-    "lambda_handler()"
+    "df = lambda_handler()"
    ]
   }
  ],
