Update Tbl creation

--- a/dataprocessing_weather.ipynb
+++ b/dataprocessing_weather.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1d7eb1d8",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,6 @@
     "username = os.getenv('USERNAME_DL')\n",
     "aws_access_key_id = os.getenv('AWS_ACCESS_KEY_ID_INTERNAL')\n",
     "aws_secret_access_key = os.getenv('AWS_SECRET_ACCESS_KEY_INTERNAL')\n",
-    "bucket_name = os.getenv('BUCKET_NAME')\n",
     "\n",
     "# Get Datalake Environment Variables \n",
     "dl_endpoint = os.getenv('ENDPOINT_DL')\n",
@@ -200,12 +199,12 @@
     "        # Create table if it does not exist\n",
     "        cur.execute(f'''\n",
     "            CREATE TABLE IF NOT EXISTS {table_name} (\n",
-    "                weather_id BIGINT PRIMARY KEY,\n",
-    "                time_id BIGINT,\n",
-    "                location_id DOUBLE PRECISION,\n",
-    "                temperature DOUBLE PRECISION,\n",
-    "                wind_speed DOUBLE PRECISION,\n",
-    "                sunshine_minutes DOUBLE PRECISION\n",
+    "                weather_id INTEGER PRIMARY KEY,\n",
+    "                time_id INTEGER,\n",
+    "                location_id INTEGER,\n",
+    "                temperature FLOAT,\n",
+    "                wind_speed FLOAT,\n",
+    "                sunshine_minutes FLOAT\n",
     "            );\n",
     "        ''')\n",
     "        conn.commit()\n",
