--- a/Code_Documentation_20250517.ipynb
+++ b/Code_Documentation_20250517.ipynb
@@ -1041,11 +1041,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "f8qBmVwX-4Wf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4177214843.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mCREATE TABLE dim_countries (\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "CREATE TABLE dim_countries (\n",
     "    country_id SERIAL PRIMARY KEY,\n",
@@ -1214,6 +1223,31 @@
    "metadata": {
     "id": "S-B7T8u6Bd0J"
    },
+   "source": [
+    "fact_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CREATE TABLE IF NOT EXISTS fact_weather (\n",
+    "    weather_id       INTEGER PRIMARY KEY,\n",
+    "    time_id          INTEGER REFERENCES dim_time(time_id),\n",
+    "    location_id      INTEGER REFERENCES dim_location(location_id),\n",
+    "    temperature      FLOAT,\n",
+    "    wind_speed       FLOAT,\n",
+    "    sunshine_minutes FLOAT\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -1223,11 +1257,21 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
