--- a/dataprocessing_weather.ipynb
+++ b/dataprocessing_weather.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1d7eb1d8",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d9161785",
    "metadata": {},
    "outputs": [
@@ -53,14 +53,14 @@
       "Connecting to WareHouse \n",
       "Connection to WareHouse successful.\n",
       "Query Performed: SELECT max(time_id),max(weather_id) FROM fact_weather;\n",
-      "Query Performed: SELECT timestamp_utc FROM dim_time WHERE time_id = 12129;\n"
+      "Query Performed: SELECT timestamp_utc FROM dim_time WHERE time_id = 12141;\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_23644\\2062124585.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n"
      ]
     },
@@ -68,17 +68,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last timestamp in warehouse:  2025-05-20 08:00:00\n",
+      "Last timestamp in warehouse:  2025-05-20 20:00:00\n",
       "Query Performed: SELECT * FROM tbl_weather_sun_data WHERE date >= '2025-05-20';\n",
       "Sunshine data downloaded.\n",
-      "Query Performed: SELECT * FROM tbl_weather_data WHERE datetime > '2025-05-20 08:00:00';\n"
+      "Query Performed: SELECT * FROM tbl_weather_data WHERE datetime > '2025-05-20 20:00:00';\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_23644\\2062124585.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql_query(query, conn)\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_23644\\2062124585.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n"
      ]
     },
@@ -97,9 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql_query(query, conn)\n",
-      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_21336\\3483813206.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\arbei\\AppData\\Local\\Temp\\ipykernel_23644\\2062124585.py:28: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n"
      ]
     },
@@ -199,11 +199,10 @@
     "        # Create table if it does not exist\n",
     "        cur.execute(f'''\n",
     "            CREATE TABLE IF NOT EXISTS {table_name} (\n",
-    "                weather_id INTEGER PRIMARY KEY,\n",
-    "                time_id INTEGER,\n",
-    "                location_id INTEGER,\n",
-    "                temperature FLOAT,\n",
-    "                wind_speed FLOAT,\n",
+    "                weather_id       INTEGER PRIMARY KEY,\n",
+    "                time_id          INTEGER REFERENCES dim_time(time_id),\n",
+    "                location_id      INTEGER REFERENCES dim_location(location_id),\n",
+    "                wind_speed       FLOAT,\n",
     "                sunshine_minutes FLOAT\n",
     "            );\n",
     "        ''')\n",
@@ -213,8 +212,8 @@
     "\n",
     "    # Insert data row by row\n",
     "    insert_query = f'''\n",
-    "        INSERT INTO {table_name} (weather_id, time_id, location_id, temperature, wind_speed, sunshine_minutes)\n",
-    "        VALUES (%s, %s, %s, %s, %s, %s)\n",
+    "        INSERT INTO {table_name} (weather_id, time_id, location_id, wind_speed, sunshine_minutes)\n",
+    "        VALUES (%s, %s, %s, %s, %s)\n",
     "    '''\n",
     "    data_tuples = df.where(pd.notnull(df), None).values.tolist()\n",
     "\n",
@@ -264,7 +263,7 @@
     "        df_ws['sunshine_minutes'] = (100 - df_ws['clouds_all']) * df_ws['sunshine_pct_hour'] / 10000 * 60\n",
     "\n",
     "        # Clean up the DataFrame\n",
-    "        df_ws = df_ws.drop(['id','pressure','humidity','temp_min','temp_max','weather_main','weather_description','rain_1h','clouds_all','sunshine_pct_hour'], axis=1)\n",
+    "        df_ws = df_ws.drop(['id','pressure','humidity','temp_min','temp_max','temp','weather_main','weather_description','rain_1h','clouds_all','sunshine_pct_hour'], axis=1)\n",
     "        print(\"Data successfully processed.\")\n",
     "\n",
     "        # Join with city data\n",
@@ -282,7 +281,7 @@
     "        df_joined_wld['weather_id'] = df_joined_wld.index + df_init_fact.iloc[0,1] + 1\n",
     "\n",
     "        # Upload data to database\n",
-    "        upload_to_db(wh_conn, 'fact_weather', df_joined_wld[['weather_id', 'time_id', 'location_id', 'temp', 'wind_speed', 'sunshine_minutes']])\n",
+    "        upload_to_db(wh_conn, 'fact_weather', df_joined_wld[['weather_id', 'time_id', 'location_id', 'wind_speed', 'sunshine_minutes']])\n",
     "\n",
     "    except Exception as e:\n",
     "        print(\"Error:\", e)\n",
