Change for daily extraction

--- a/DL_DWH_energy_trade_data.ipynb
+++ b/DL_DWH_energy_trade_data.ipynb
@@ -69,13 +69,10 @@
    "source": [
     "def lambda_handler(event, context):\n",
     "    try:\n",
-    "        # Setup date window (2 days ago)\n",
-    "        trade_day = date.today() - timedelta(days=2)\n",
-    "        print(f'trade_day: {trade_day}')\n",
+    "        # Setup date window (1 day ago)\n",
+    "        trade_day = date.today() - timedelta(days=1)\n",
     "        start_time = datetime.combine(trade_day, datetime.min.time())\n",
-    "        print(f'start_time: {start_time}')\n",
     "        end_time = start_time + timedelta(days=1)\n",
-    "        print(f'end_time: {end_time}')\n",
     "\n",
     "        # Connect to source and target databases\n",
     "        conn_src = psycopg2.connect(**DB_CONFIG_DATALAKE)\n",
@@ -87,37 +84,41 @@
     "        CREATE TABLE IF NOT EXISTS fact_energy_trade (\n",
     "            trade_id BIGINT PRIMARY KEY,\n",
     "            time_id INT,\n",
-    "            location_id INT,\n",
+    "            origin_country_id INT,\n",
     "            neighbor_country_id INT,\n",
     "            direction TEXT,\n",
     "            energy_value_gw FLOAT,\n",
     "            exchange_rate FLOAT,\n",
+    "            value_eur FLOAT,\n",
     "            value_chf FLOAT\n",
     "        );\n",
     "        \"\"\")\n",
     "        conn_tgt.commit()\n",
     "\n",
     "        # 1) Load and aggregate hourly energy CBET data\n",
-    "        sql_energy = \"\"\"\n",
+    "        sql_energy = f\"\"\"\n",
     "        SELECT\n",
     "        date_trunc('hour', timestamp) AS hour,\n",
     "        country,\n",
     "        SUM(value) AS energy_sum_gw\n",
     "        FROM tbl_energy_cbet_data\n",
+    "        WHERE timestamp >= '{start_time}' AND timestamp < '{end_time}'\n",
     "        GROUP BY 1,2\n",
-    "        ORDER BY 1,2;\n",
+    "        ORDER BY 1,2\n",
+    "        ;\n",
     "        \"\"\"\n",
     "        df_energy = pd.read_sql_query(sql_energy, conn_src)\n",
     "        # drop aggregate \"sum\" rows that aren’t actual countries\n",
     "        df_energy = df_energy[df_energy['country'].str.strip().str.lower() != 'sum']\n",
     "\n",
     "        # 2) Load daily currency rates\n",
-    "        sql_currency = \"\"\"\n",
+    "        sql_currency = f\"\"\"\n",
     "        SELECT\n",
     "        DATE(timestamp) AS rate_date,\n",
     "        exchange_rate\n",
     "        FROM tbl_currency_data\n",
-    "        WHERE source_currency='CHF' AND target_currency='EUR'\n",
+    "        WHERE source_currency='CHF' \n",
+    "            AND target_currency='EUR'\n",
     "        ;\n",
     "        \"\"\"\n",
     "        df_curr = pd.read_sql_query(sql_currency, conn_src)\n",
@@ -139,8 +140,8 @@
     "        )\n",
     "\n",
     "        # 4) Map foreign keys\n",
-    "        # location_id always Switzerland = 6\n",
-    "        df_energy['location_id'] = 6\n",
+    "        # origin_country_id always Switzerland = 6, still add column for potential scalability\n",
+    "        df_energy['origin_country_id'] = 6\n",
     "\n",
     "        # Fetch dim_countries for neighbor_country_id\n",
     "        sql_country = \"SELECT country_id, country_name_en FROM dim_countries;\"\n",
@@ -164,11 +165,13 @@
     "        )\n",
     "\n",
     "        # 5) Lookup hourly energy prices and calculate value in EUR\n",
-    "        sql_price = \"\"\"\n",
+    "        sql_price = f\"\"\"\n",
     "        SELECT\n",
     "        date_trunc('hour', timestamp) AS hour,\n",
     "        price\n",
-    "        FROM tbl_energy_price_data;\n",
+    "        FROM tbl_energy_price_data\n",
+    "        WHERE timestamp >= '{start_time}' AND timestamp < '{end_time}'\n",
+    "        ;\n",
     "        \"\"\"\n",
     "        df_price = pd.read_sql_query(sql_price, conn_src)\n",
     "        # ensure one price per hour to avoid duplicate merges\n",
@@ -184,7 +187,9 @@
     "        )\n",
     "\n",
     "        # calculate value in EUR: price (EUR/MWh) * 1000 * energy_value_gw / exchange_rate (CHF-EUR)\n",
-    "        df_energy['value_chf'] = (df_energy['price_eur_mwh'] * 1000 * df_energy['energy_value_gw'] / df_energy['exchange_rate'])\n",
+    "        df_energy['value_eur'] = df_energy['price_eur_mwh'] * 1000 * df_energy['energy_value_gw']\n",
+    "        df_energy['value_chf'] = df_energy['value_eur'] / df_energy['exchange_rate']\n",
+    "        df_energy['value_eur'] = df_energy['value_eur'].round(2)\n",
     "        df_energy['value_chf'] = df_energy['value_chf'].round(2)\n",
     "\n",
     "        # 6) Generate trade_id starting after current max\n",
@@ -194,19 +199,19 @@
     "        df_energy['trade_id'] = range(max_id+1, max_id+1+len(df_energy))\n",
     "\n",
     "        # 7) Build insert records\n",
-    "        records = df_energy[['trade_id','time_id','location_id',\n",
+    "        records = df_energy[['trade_id','time_id','origin_country_id',\n",
     "                            'neighbor_country_id','direction',\n",
-    "                            'energy_value_gw','exchange_rate','value_chf']].values.tolist()\n",
+    "                            'energy_value_gw','exchange_rate','value_eur','value_chf']].values.tolist()\n",
     "\n",
     "            # Batch insert (convert numpy types to native Python types)\n",
     "        insert_sql = (\"INSERT INTO fact_energy_trade \"\n",
-    "            \"(trade_id, time_id, location_id, neighbor_country_id, direction, energy_value_gw, exchange_rate, value_chf) \"\n",
+    "            \"(trade_id, time_id, origin_country_id, neighbor_country_id, direction, energy_value_gw, exchange_rate, value_eur, value_chf) \"\n",
     "            \"VALUES %s\"\n",
     "        )\n",
     "        # Convert to list of tuples\n",
-    "        records = df_energy[['trade_id','time_id','location_id',\n",
+    "        records = df_energy[['trade_id','time_id','origin_country_id',\n",
     "                            'neighbor_country_id','direction',\n",
-    "                            'energy_value_gw','exchange_rate','value_chf']].values.tolist()\n",
+    "                            'energy_value_gw','exchange_rate','value_eur','value_chf']].values.tolist()\n",
     "        # Ensure each value is a Python scalar\n",
     "        clean_records = []\n",
     "        for row in records:\n",
@@ -231,7 +236,7 @@
     "        return {\n",
     "            'statusCode': 500,\n",
     "            'body': json.dumps(f'Error: {str(e)}')\n",
-    "        }\n"
+    "        }"
    ]
   }
  ],
